# Lab11

./: .gitignore  PROMPT_LOG.md  README.md
HardZad/: .dockerignore  Cargo.toml  Dockerfile  docker-compose.yml  pyproject.toml  test_functional.py
HardZad/src/: lib.rs  main.py
MidZad/: docker-compose.yml  test_integration.py
MidZad/shared_data/: from_go.txt  from_rust.txt
